# scof

./: .gitignore  Cargo.toml  LICENSE  README.md  compress.sh
example/: score.imu
examples/: metadata.rs  movement.rs  style.rs
schema/: Meta.muon  Movement.imu  Movement.muon  Style.muon  score.imu
scof/: Meta.muon  Style.muon  Synth.muon
scof/Movement/: The Beginning.muon
score/: Meta.imu  Synth.imu
score/Movement/: The Beginning.imu
src/: default_movement.muon  fraction.rs  lib.rs
src/note/: articulation.rs  duration.rs  mod.rs  pitch.rs
tests/: scof.rs
